completing addition of default and failure return codes for app actions
